# Pixeltovoxelprojector

./: CMakeLists.txt  LICENSE  Makefile  README.md  astravoxel_demo.py  astravoxel_live.py  astravoxel_live_viewer.py  astravoxel_multicamera_demo.py  astravoxel_realtime.py  astravoxel_simple_webcam.py  demo_pixeltovoxel.py  fits_loader.py  gui_config.json  gui_interface.py  launcher.py  process_image.cpp  ray_voxel.cpp  requirements.txt  sensor_fusion.cpp  sensor_fusion.hpp  spacevoxelviewer.py  visualize_results.py  voxelmotionviewer.py
demo_output/: celestial_sphere_texture.npy  demo_parameters.json  voxel_grid.npy
